Added some fields for user inputs

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.2",
     "inline-source-map": "^0.6.2",
+    "prop-types": "^15.7.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
